--- a/src/components/InventoryPanel/InventoryPanel.module.css
+++ b/src/components/InventoryPanel/InventoryPanel.module.css
@@ -1,5 +1,7 @@
 .inventory-panel {
     width: 100%;
     height: 100%;
-    background-color: #dedede;
+    background-color: #b5aa7d;
+    display: flex;
+    flex-direction: column;
 }
