--- a/src/components/InventoryPanel/InventoryPanel.module.css
+++ b/src/components/InventoryPanel/InventoryPanel.module.css
@@ -1,6 +1,16 @@
 .inventory-panel {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
+    background-color: #1f2d3a;
+    padding: 24px 2px;
+}
+
+.inventory-panel-inner {
+    padding: 8px;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
     background-color: #b5aa7d;
     display: flex;
     flex-direction: column;
