feat: Added Inventory cells and introduced constants

--- a/src/components/CardCellsPanel/CardCellsPanel.module.css
+++ b/src/components/CardCellsPanel/CardCellsPanel.module.css
@@ -3,3 +3,9 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.card-cell-button-add {
+    width: 100%;
+    min-width: auto;
+    box-sizing: border-box;
+}
