feat: Added full screen dummy item selector

--- a/src/components/ItemCell/ItemCell.module.css
+++ b/src/components/ItemCell/ItemCell.module.css
@@ -47,10 +47,10 @@
 .item-cell-trinket {
     background-position: -240px -48px;
 }
-.item-cell-left-ring {
+.item-cell-left_ring {
     background-position: 0 -96px;
 }
-.item-cell-right-ring {
+.item-cell-right_ring {
     background-position: -48px -96px;
 }
 .item-cell-book {
