--- a/src/components/InventoryPanel/InventoryPanel.module.css
+++ b/src/components/InventoryPanel/InventoryPanel.module.css
@@ -11,7 +11,7 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    background-color: #b5aa7d;
+    background-color: #837f68;
     display: flex;
     flex-direction: column;
 }
