--- a/src/components/MeridianButton/MeridianButton.module.css
+++ b/src/components/MeridianButton/MeridianButton.module.css
@@ -1,8 +1,13 @@
-.meridian-button {
+.meridian-container {
     width: 100%;
     height: 160px;
+}
+
+.meridian-button {
+    width: 291px;
+    height: 160px;
+    margin: auto;
     background-image: url(../../static/interface/invent-pers.png);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    background-position: left;
 }
